--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pycparser==2.20
 pydotplus==2.0.2
 PyJWT==2.1.0
 pyparsing==2.4.7
+python-memcached==1.59
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
